--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,4 @@
-/ClientBridge.class
-/MainServer$ClientBridge.class
+/LocI.class
 /MainServer.class
 /Snake.class
 /SnakeManager.class
-/Dispatcher.class
